--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,15 +39,15 @@ ConfiguredInternetSpeed=15000
 ConfiguredLanSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/CrabChefFiles/Maps/PersistenLevel.PersistenLevel
+EditorStartupMap=/Game/CrabChefFiles/Maps/Kitchen_Completion.Kitchen_Completion
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/VRE/Core/VRGameInstance.VRGameInstance_C
-GameDefaultMap=/Game/CrabChefFiles/Maps/PersistenLevel.PersistenLevel
-ServerDefaultMap=/Engine/Maps/Entry
+GameDefaultMap=/Game/CrabChefFiles/Maps/Kitchen_Completion.Kitchen_Completion
+ServerDefaultMap=/Game/CrabChefFiles/Maps/Kitchen_Completion.Kitchen_Completion
 GlobalDefaultGameMode=/Game/VRE/Core/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
 
