Water, Bottle, Level Design
Created stylised water that can be used for small to large bodies of water (including sea foam), added in a free Bottle asset that uses textures to fake liquid movement and carbonation, updated Level1a with some more white box ideas

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,6 +101,7 @@ r.Mobile.AntiAliasing=3
 vr.VRS.HMDFixedFoveationDynamic=False
 vr.VRS.HMDFixedFoveationLevel=0
 vr.MobileMultiView=True
+r.GenerateMeshDistanceFields=True
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAutoCreateNavigationData=True
