Added Simple Teleporters
White cylinders that you can walk onto, it teleports you to the location of the arrow :)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,15 +39,15 @@ ConfiguredInternetSpeed=15000
 ConfiguredLanSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/CrabChefFiles/Maps/Kitchen_Completion.Kitchen_Completion
+EditorStartupMap=/Game/CrabChefFiles/Maps/Level1a.Level1a
 LocalMapOptions=
-TransitionMap=
+TransitionMap=/Game/CrabChefFiles/Maps/PersistentLevel.PersistentLevel
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/VRE/Core/VRGameInstance.VRGameInstance_C
-GameDefaultMap=/Game/CrabChefFiles/Maps/Kitchen_Completion.Kitchen_Completion
-ServerDefaultMap=/Game/CrabChefFiles/Maps/Kitchen_Completion.Kitchen_Completion
+GameDefaultMap=/Game/CrabChefFiles/Maps/Level1a.Level1a
+ServerDefaultMap=/Game/CrabChefFiles/Maps/Level1a.Level1a
 GlobalDefaultGameMode=/Game/VRE/Core/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
 
